[package]
name = "wasm"
version = "0.1.0"
edition = "2021"
authors = ["youngqqcn@gmail.com"]

[dependencies]
base64 = "0.21.5"
getrandom = { version = "0.2", features = ["js"] }
hmac = "0.12.1"
js-sys = "0.3.61"
md5 = "0.7.0"
rand = "0.8.5"
sha2 = "0.10.8"
sha3 = "0.10.8"
wasm-bindgen = "0.2.89"


[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
panic = 'abort'

[lib]
# crate-type = ["cdylib"]
crate-type = ["cdylib", "rlib"]


# [package.scripts]
# build = "cargo build --release"
# test = "cargo test --all"
# run = "cargo run"